@@ -113,8 +113,8 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
         if force or not os.path.exists(dvifile):
             command = self.get_tex_command(tex, fname)
             stdin, stdout, stderr = os.popen3(command)
-            verbose.report(''.join(stdout.readlines()), 'debug-annoying')
-            err = ''.join(stderr.readlines())
+            verbose.report(stdout.read(), 'debug-annoying')
+            err = stderr.read()
             if err: verbose.report(err, 'helpful')
 
         # tex will put it's output in the current dir if possible, and
@@ -144,8 +144,8 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
         # see get_rgba for a discussion of the background
         if force or not os.path.exists(pngfile):
             stdin, stdout, stderr = os.popen3(command)
-            verbose.report(''.join(stdout.readlines()), 'debug-annoying')
-            err = ''.join(stderr.readlines())
+            verbose.report(stdout.read(), 'debug-annoying')
+            err = stderr.read()
             if err: verbose.report(err, 'helpful')
         return pngfile
 
@@ -159,8 +159,8 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
         if not os.path.exists(psfile):
             command = 'dvips -q -E -D %d -o "%s" "%s"'% (dpi, psfile, dvifile)
             stdin, stdout, stderr = os.popen3(command)
-            verbose.report(''.join(stdout.readlines()), 'debug-annoying')
-            err = ''.join(stderr.readlines())
+            verbose.report(stdout.read(), 'debug-annoying')
+            err = stderr.read()
             if err: verbose.report(err, 'helpful')
 
         return psfile
